--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "sass-loader": "^10.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "node ./server/index.js",
+    "start": "react-scripts start",
+    "dev-server": "node ./server/index.js",
+    "proxy": "http://localhost:8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
