--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -22,11 +23,11 @@
   "scripts": {
     "start": "react-scripts start",
     "dev-server": "node ./server/index.js",
-    "proxy": "http://localhost:8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
